# QtMediaPlayer

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  application.cpp  application.h  constants.cpp  constants.h  demo.qrc  demo.rc  fileassociation.cpp  fileassociation.h  framelesswindow.cpp  framelesswindow.h  i18n.h  logger.cpp  logger.h  main.cpp  os.cpp  os.h  settings.cpp  settings.h  theme.cpp  theme.h  updatemanager.cpp  updatemanager.h  version.h.in
demo/qml/: CloseButton.qml  ControlPanel.qml  MainWindowBase.qml  MaximizeButton.qml  MinimizeButton.qml  Player.qml  ProgressSlider.qml  VolumeButton.qml
demo/qml/+windows/: MainWindow.qml
demo/qtwinextras/: qquickiconloader_p.h  qquickthumbnailtoolbar.cpp  qquickthumbnailtoolbar_p.h  qquickthumbnailtoolbutton.cpp  qquickthumbnailtoolbutton_p.h  qwinevent.cpp  qwinevent_p.h  qwintaskbarbutton.cpp  qwintaskbarprogress.cpp  qwintaskbarprogress.h  qwinthumbnailtoolbar.cpp  qwinthumbnailtoolbar.h  qwinthumbnailtoolbutton.cpp  qwinthumbnailtoolbutton.h
example/: CMakeLists.txt  README.md  application.cpp  console.cpp  console.h  constants.cpp  demo.manifest  demo.qrc  example.manifest  example.rc  framelesswindow.cpp  framelesswindow.h  history.cpp  history.h  i18n.cpp  logger.cpp  logger.h  main.cpp  os.h  settings.h  theme.cpp  theme.h
example/qml/: MainWindow.qml  MainWindowBase.qml  MinimizeButton.qml  OpenMediaDialog.qml  PlayButton.qml  StopButton.qml  TitleBar.qml  main.qml
example/qml/+windows/: MainWindow.qml
example/qtwinextras/: qquickiconloader.cpp  qquicktaskbarbutton.cpp  qquicktaskbarbutton_p.h  qwintaskbarbutton.h
src/: CMakeLists.txt  mediaplayer.cpp  mediaplayer.h  qtmediaplayer.cpp  qtmediaplayer.h  qtmediaplayer.rc  qtmediaplayer_global.h
src/backends/: CMakeLists.txt  backendinterface.cpp  backendinterface.h  texturenodeinterface.cpp  texturenodeinterface.h
src/backends/mdk/: CMakeLists.txt  mdkbackend.cpp  mdkbackend.h  mdkbackend.rc  mdkbackend_global.h  mdkplayer.cpp  mdkplayer.h  mdkqthelper.cpp  mdkqthelper.h  mdkvideotexturenode.cpp  mdkvideotexturenode.h  mdkvideotexturenode_impl.cpp  qtmdkhelper.cpp  qtmdkhelper.h  qtmdkplayer.cpp  qtmdkplayer.h  qtmdkvideotexturenode.cpp  qtmdkvideotexturenode.h  qtmdkvideotexturenode_impl.cpp
src/backends/mdk/include/mdk/: MediaInfo.h  Player.h  RenderAPI.h  VideoFrame.h  global.h
src/backends/mdk/include/mdk/c/: MediaInfo.h  Player.h  RenderAPI.h  VideoFrame.h  global.h  module.h
src/backends/mdk/licenses/: LICENSE.MIT
src/backends/mpv/: CMakeLists.txt  mpvbackend.cpp  mpvbackend.h  mpvbackend.qrc  mpvbackend.rc  mpvbackend_global.h  mpvplayer.cpp  mpvplayer.h  mpvqthelper.cpp  mpvqthelper.h  mpvvideotexturenode.cpp  mpvvideotexturenode.h  qtmpvhelper.cpp  qtmpvhelper.h  qtmpvplayer.cpp  qtmpvplayer.h  qtmpvvideotexturenode.cpp  qtmpvvideotexturenode.h
src/backends/mpv/include/mpv/: client.h
src/backends/vlc/: CMakeLists.txt  vlcbackend.cpp  vlcbackend.h  vlcbackend.rc  vlcbackend_global.h  vlcqthelper.cpp  vlcqthelper.h
src/backends/vlc/include/vlc/: libvlc.h  vlc.h
src/common/: CMakeLists.txt  backendinterface.cpp  backendinterface.h  common.rc  common_global.h  dummybackend.cpp  dummybackend.h  dummyplayer.cpp  dummyplayer.h  mediainfo.cpp  mediainfo.h  playerinterface.cpp  playerinterface.h  playertypes.h  texturenodeinterface.h
src/loader/: CMakeLists.txt  loader.rc  qtmediaplayer.cpp  qtmediaplayer.h  qtmediaplayer_global.h
